@startuml Alarm Setup – Class Diagram
title Alarm Setup · Class Diagram

skinparam defaultFontName Roboto
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFCFA

skinparam class {
  BackgroundColor #E8F5E9
  BorderColor     #2E7D32
  HeaderBackgroundColor #C8E6C9
}

' ───────────────────────────────────
'  Composable Screen
' ───────────────────────────────────

class SetupScreen <<@Composable>> {
  ' UI state
  - draft : AlarmDraft
  - isEditMode : Boolean
  ' Actions
  + onTitleChange(title: String)
  + onAddConditionClick()
  + onRemoveCondition(index: Int)
  + onReorderConditions(from: Int, to: Int)
  + onSetOperator(op: Operator)
  + onSetNumericalValue(index: Int, value: Any)
  + onToggleReadout(on: Boolean)
  + onToggleRing(on: Boolean)
  + onToggleTriggerOnce(on: Boolean)
  + onSave()
  + onDelete()
}

' ───────────────────────────────────
'  ViewModel
' ───────────────────────────────────

class SetupViewModel {
  - repo : IAlarmRepository
  --
  + draft : StateFlow<AlarmDraft>
  + isEditMode : StateFlow<Boolean>
  --
  + loadAlarm(id: Long)
  + loadDraft(draft: AlarmDraft)
  + updateTitle(title: String)
  + addCondition(c: LeafCondition)
  + removeCondition(index: Int)
  + reorderConditions(from: Int, to: Int)
  + setOperator(op: Operator)
  + setNumericalValue(index: Int, value: Any)
  + setReadout(on: Boolean)
  + setRing(on: Boolean)
  + setTriggerOnce(on: Boolean)
  + save(): Long
  + delete()
}

' ───────────────────────────────────
'  Interface (external)
' ───────────────────────────────────

interface IAlarmRepository <<interface>> {
  + getById(id: Long): Flow<Alarm?>
  + upsert(alarm: Alarm): suspend Long
  + delete(ids: List<Long>): suspend Unit
}

' ───────────────────────────────────
'  Models (shared)
' ───────────────────────────────────

class AlarmDraft <<data class>> {
  + title : String
  + rootCondition : CompositeCondition
  + readout : Boolean
  + ring : Boolean
  + triggerOnce : Boolean
}

abstract class Condition <<sealed>>

class LeafCondition <<data class>> {
  + category : String
  + type : String
  + label : String
  + value : Any?
}

class CompositeCondition <<data class>> {
  + operator : Operator
  + children : List<Condition>
}

enum Operator {
  AND
  OR
}

' ───────────────────────────────────
'  Relationships
' ───────────────────────────────────

SetupScreen --> SetupViewModel : observes StateFlow
SetupViewModel --> IAlarmRepository : save · load · delete
SetupViewModel ..> AlarmDraft : manages
AlarmDraft *-- CompositeCondition : rootCondition
Condition <|-- LeafCondition
Condition <|-- CompositeCondition
CompositeCondition o-- "0..*" Condition : children
CompositeCondition --> Operator

@enduml
